# vmeeting-bot-cli

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
src/vmeeting_bot_cli/: cli.py  config.py
src/vmeeting_bot_cli/livekit_streamer/: lk_streamer.py
src/vmeeting_bot_cli/selenium_bot/: audio_capture.js  google_meets.py
src/vmeeting_bot_cli/visualizer/: visualizer.py
